# forecast-project

./: README.md  docker-compose.yaml
analysis_service/: Dockerfile  pyproject.toml
analysis_service/src/: data_loader.py  forecaster.py  main.py  model_trainer.py  strategist.py
bot_service/: Dockerfile  pyproject.toml
bot_service/src/: bot.py
