[project]
name = "analysis_service"
version = "0.1.0"
description = "Stock analysis and forecasting service"
authors = [
    { name = "Ilya Serov", email = "email@example.com" },
]
dependencies = [
    "redis>=5.0",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.21",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
requires-python = ">=3.10"

[project.scripts]
analysis-worker = "src.main:main"
